@@ -27,6 +27,8 @@
         <activity android:name=".Example13" android:screenOrientation="landscape"/>
         <activity android:name=".Example14" android:screenOrientation="landscape"/>
         <activity android:name=".Example15" android:screenOrientation="landscape"/>
+        <activity android:name=".Example16" android:screenOrientation="landscape"/>
+        <activity android:name=".Example17" android:screenOrientation="landscape"/>
 
     <activity android:screenOrientation="landscape" android:name=".Example16"></activity>
 </application>
