@@ -1,23 +1,22 @@
 package com.stickycoding.Rokon.Backgrounds;
 
 import javax.microedition.khronos.opengles.GL10;
+import javax.microedition.khronos.opengles.GL11;
 
 import com.stickycoding.Rokon.Background;
 import com.stickycoding.Rokon.Rokon;
 import com.stickycoding.Rokon.Texture;
+import com.stickycoding.Rokon.TextureAtlas;
 import com.stickycoding.Rokon.TextureBuffer;
-
-
+import com.stickycoding.Rokon.OpenGL.RokonRenderer;
 /**
- * One texture will be repeated as it scrolls horizontally
+ * One texture will be repeated as it scrolls horizonally and vertically
  * 
  * @author Richard
  */
 public class ScrollingBackground extends Background {
 	
 	private TextureBuffer _buffer;
-	private float _x;
-	private float _y;
 
 	private float _scrollX;
 	private float _scrollY;
@@ -28,13 +27,7 @@ public class ScrollingBackground extends Background {
 	private float _height;
 	
 	public ScrollingBackground(Texture texture) {
-		this(texture, 0);
-	}
-	
-	public ScrollingBackground(Texture texture, float y) {
 		_buffer = new TextureBuffer(texture);
-		_x = 0;
-		_y = y;
 		_scrollX = 0;
 		_scrollY = 0;
 		_targetWidth = Rokon.getRokon().getWidth();
@@ -45,8 +38,8 @@ public class ScrollingBackground extends Background {
 	
 	private float _startX;
 	private float _startY;
-	private int rows;
-	private int cols;
+	private int rows, cols;
+	private int texToBe;
 	private float x;
 	private float y;
 	public void drawFrame(GL10 gl) {
@@ -72,14 +65,21 @@ public class ScrollingBackground extends Background {
 			y += _height;
 			cols++;
 		}
+
+		texToBe = TextureAtlas.texId[_buffer.texture.atlasIndex];
+		if(Rokon.getRokon().currentTexture != texToBe) {
+			gl.glBindTexture(GL10.GL_TEXTURE_2D, texToBe);
+			Rokon.getRokon().currentTexture = texToBe;
+		}
 		
 		gl.glColor4f(1, 1, 1, 1);
+		gl.glVertexPointer(2, GL11.GL_FLOAT, 0, RokonRenderer.vertexBuffer);
 		gl.glTexCoordPointer(2, GL10.GL_FLOAT, 0, _buffer.buffer);
 		
 		for(int i = 0; i < rows; i++) {
 			for(int j = 0; j < cols; j++) {
-				x = _startX + (_width * i);
-				y = _startY + (_height * j);
+                x = _startX + (_width * i);
+                y = _startY + (_height * j);
 				gl.glLoadIdentity();
 				gl.glTranslatef(x, y, 0);
 				gl.glScalef(_width, _height, 0);
