@@ -1,60 +1,49 @@
-//	Custom Tile Animation
-
 package com.stickycoding.RokonExamples;
 
+import com.stickycoding.Rokon.Emitter;
 import com.stickycoding.Rokon.RokonActivity;
-import com.stickycoding.Rokon.Sprite;
 import com.stickycoding.Rokon.Texture;
 import com.stickycoding.Rokon.Backgrounds.FixedBackground;
+import com.stickycoding.Rokon.ParticleModifiers.AccelerateParticle;
+import com.stickycoding.Rokon.ParticleModifiers.Expire;
+import com.stickycoding.Rokon.ParticleModifiers.ParticleDimensions;
 
+/**
+ * @author Richard
+ * Basic usage of the Emitter and Particle system
+ */
 public class Example16 extends RokonActivity {
 	
+	public Texture backgroundTexture;
 	public FixedBackground background;
 	
-	public Texture [] narutoTexture = new Texture[2];
-	public Sprite [] narutoSprite = new Sprite[5];
+	public Texture carTexture;
+	public Emitter carEmitter;
 	
     public void onCreate() {
-    	createEngine("graphics/loading.png", 480, 320, true);
+        createEngine(480, 320, true);
     }
 
 	@Override
 	public void onLoad() {
-		narutoTexture[0] = rokon.createTexture("graphics/sprites/naruto.png");
-		narutoTexture[1] = rokon.createTexture("graphics/backgrounds/beach.png");
-		narutoTexture[0].setTileSize(40, 40);
-		rokon.prepareTextureAtlas(1024);
-
-		narutoSprite[0] = new Sprite(100, 100, 40, 40, narutoTexture[0]);
-    	narutoSprite[1] = new Sprite(140, 100, 40, 40, narutoTexture[0]);
-    	narutoSprite[2] = new Sprite(100, 140, 40, 40, narutoTexture[0]);
-    	narutoSprite[3] = new Sprite(140, 140, 40, 40, narutoTexture[0]);
-    	narutoSprite[4] = new Sprite(180, 140, 40, 40, narutoTexture[0]);
-        rokon.addSprite(narutoSprite[0]);
-        rokon.addSprite(narutoSprite[1]);
-        rokon.addSprite(narutoSprite[2]);
-        rokon.addSprite(narutoSprite[3]);
-        rokon.addSprite(narutoSprite[4]);
-        int animeNaruto0[] = {2,13,2,24};
-        int animeNaruto1[] = {6,17};
-        int animeNaruto2[] = {37,48,37,59};
-        int animeNaruto3[] = {9,20,9,31};
-        int animeNaruto4[] = {41,42,43,44};
-        narutoSprite[0].animateCustom(animeNaruto3, 200);
-        narutoSprite[1].animateCustom(animeNaruto4, 200);
-        narutoSprite[2].animateCustom(animeNaruto0, 200);
-        narutoSprite[3].animateCustom(animeNaruto1, 200);
-        narutoSprite[4].animateCustom(animeNaruto2, 200);
-		background = new FixedBackground(narutoTexture[1]);
+		backgroundTexture = rokon.createTexture("graphics/backgrounds/beach.png");
+		carTexture = rokon.createTexture("graphics/sprites/car.png");
+		rokon.prepareTextureAtlas(512);
+		background = new FixedBackground(backgroundTexture);
+		carEmitter = new Emitter(150, 150, 1, carTexture);
+		carEmitter.addParticleModifier(new ParticleDimensions(50, 50, 50, 50));
+		carEmitter.addParticleModifier(new Expire(600, 1200));
+		carEmitter.addParticleModifier(new AccelerateParticle(0, 0, -100, -200));
 	}
 
 	@Override
 	public void onLoadComplete() {
 		rokon.setBackground(background);
+		rokon.addEmitter(carEmitter);
 	}
 
 	@Override
 	public void onGameLoop() {
 
-	}
+	} 
 }
